# aiionly-Side-by-side

./: .gitignore  CONTRIBUTING.md  GIT_GUIDE.md  LICENSE  Makefile  README.md  config.yaml.example  pyproject.toml  requirements.txt
model_comparison_system/: __init__.py  app_controller.py  main.py
model_comparison_system/api/: __init__.py  maas_client.py  models.py
model_comparison_system/config/: __init__.py  config_service.py  logging_config.py  models.py
model_comparison_system/services/: __init__.py  error_service.py  model_service.py
model_comparison_system/ui/: __init__.py
tests/: __init__.py  conftest.py  test_project_structure.py
tests/integration/: __init__.py
tests/property/: __init__.py
tests/unit/: __init__.py  test_app_controller.py  test_config_service.py  test_enhanced_validation.py  test_error_service.py  test_maas_client.py  test_model_service.py
